--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "client-dev": "vite",
-    "client-build": "vite build",
+    "build": "vite build",
     "client-preview": "vite preview",
     "start": "npm run client-dev",
     "format": "npx prettier --write **/*.{js,jsx,md}",
